# gb_patch_gpu

./: Barycentric.cpp  BezierWeights.cpp  CMakeLists.txt  Cpu.cpp  LICENSE  Main.cpp  MainShaded.cpp  PatchLoader.cpp  README.md  SideCoords.cpp
Models/: CMakeLists.txt  Trebol_3sided.gbp  Trebol_4bsided.gbp  Trebol_4esided.gbp  Trebol_5sided.gbp  Trebol_6sided.gbp  car.gbp  dolphin.gbp  octant.gbp
